--- a/.babelrc
+++ b/.babelrc
@@ -1,14 +1,17 @@
 {
   "presets": [
-    "react",
+    "@babel/preset-react",
     [
-      "env",
+      "@babel/preset-env",
       {
         "targets": {
-          "browsers": ["last 2 versions"]
+          "node": "current"
         }
       }
     ]
   ],
-  "plugins": ["transform-class-properties", "transform-object-rest-spread"]
-
+  "plugins": [
+    "@babel/plugin-proposal-class-properties",
+    "@babel/plugin-transform-runtime"
+  ]
+}
