--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "dev": "parcel ./src/public/index.html",
     "clear-build-cache": "rm -rf .cache/ dist/",
     "predeploy": "rm -rf .cache/ dist/",
+    "heroku-postbuild": "rm -rf .cache/ dist/",
     "build": "parcel build dist/index.html --public-url ./"
   },
   "repository": {
